<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="add_new_playlist">Новый плэйлист</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks_empty">Ваша медиатека пуста</string>
    <string name="track_is_already_in">Трек уже добавлен в плейлист</string>
    <string name="track_added_in">Добавлено в плейлист</string>
    <string name="complete_creating_of_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_empty">Вы не создали\n
        ни одного плейлиста</string>

    <string name="playlists">Плейлисты</string>
    <string name="course_link" translatable="false">"https://practicum.yandex.ru/profile/android-developer/"</string>
    <string name="message_email" translatable="false">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="message_theme" translatable="false">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="email" translatable="false">"maxbulmail@yandex.ru"</string>
    <string name="practicum_offer_link" translatable="false">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="application_missing">Приложение отсутствует</string>
    <string name="error_message">Проблемы со связью\n
        \n
        Загрузка не удалась. Проверьте\n
        подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>