<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_settings"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="28dp"
                app:iconGravity="textStart"
                app:iconPadding="28dp"
                app:iconTint="@color/black"
                app:srcCompat="@drawable/ic_arrow"
                app:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:letterSpacing="0"
                android:text="@string/settings"


                android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="start"
            android:letterSpacing="0"
            android:text="@string/dark_theme"

            app:textAllCaps="false" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="start"
            android:letterSpacing="0"
            android:text="@string/share_the_app"

            app:textAllCaps="false" />
        <TextView
            android:id="@+id/textView"
            android:paddingTop="21dp"
            android:paddingStart="21dp"
            android:drawableLeft="@drawable/ic_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="start"
            android:letterSpacing="0"
            android:text="@string/write_to_support"

            app:textAllCaps="false" />
        <TextView

            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:drawableLeft="@drawable/ic_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="start"
            android:letterSpacing="0"
            android:text="@string/user_agreement"

            app:textAllCaps="false" />
        <TextView

            android:paddingTop="20dp"
            android:paddingStart="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_arrow_right" />

    </LinearLayout>

</LinearLayout>